--- a/style/template.css
+++ b/style/template.css
@@ -13,89 +13,89 @@ body { margin: 0; padding: 0; text-align: left; }
 #imFooterBg { position: absolute; left: 0; bottom: 0; width: 100%; }
 #imFooter { position: relative; }
 @media (min-width: 960px) {
-		html { background-image: url('computer-2982270_1920-4-.jpg'); background-position: center top; background-repeat: no-repeat; background-size: cover; background-attachment: fixed; background-color: #FFFFFF; }
+		html { background-image: none; background-color: #FFFFFF; }
 		#imPage { padding-top: 0; margin-top: 0px; margin-bottom: 0px; min-width: 960px; }
-		#imHeaderBg { height: 100px; background-image: none; background-color: transparent; }
-		#imHeader { position: relative; margin-bottom: 0; margin-left: auto; margin-right: auto; height: 100px; background-image: url('Transparent190-2--1-.png'); background-position: left top; background-repeat: repeat; background-attachment: scroll; background-color: transparent; }
+		#imHeaderBg { height: 100px; background-image: none; background-color: #4FD2C2; }
+		#imHeader { position: relative; margin-bottom: 0; margin-left: auto; margin-right: auto; height: 100px; background-image: none; background-color: transparent; }
 		#imHeaderObjects { position: relative; height: 100px; }
-		#imMnMnContainer { position: absolute; top: 50px; left: 0; right: 0; margin-left: auto; margin-right: auto; }
-		#imMnMn { position: relative; margin-left: 15px; margin-right: auto; height: 40px; padding: 5px 5px 5px 5px; background-image: none; background-color: transparent; }
+		#imMnMnContainer { position: absolute; top: 5px; left: 0; right: 0; margin-left: auto; margin-right: auto; }
+		#imMnMn { position: relative; margin-left: 350px; margin-right: auto; height: 30px; padding: 5px 5px 5px 5px; background-image: none; background-color: transparent; }
 		#imMnMn > ul { text-align: left; }
 		#imMnMn li { display: inline; }
 		#imMnMnGraphics { display: none; }
-		#imContent { min-height: 520px; padding: 0px 0 0px 0; }
-		#imContentGraphics { left: 0; right: 0; margin-left: auto; margin-right: auto; min-height: 520px;  background-image: url('Transparent190-12-.png'); background-position: left top; background-repeat: repeat; background-attachment: scroll; background-color: transparent; }
-		#imFooterBg { height: 40px; background-image: none; background-color: transparent; }
-		#imFooter { margin-left: auto; margin-right: auto; height: 80px; background-image: url('Transparent190-1--1-.png'); background-position: left top; background-repeat: repeat; background-attachment: scroll; background-color: transparent; }
-		#imFooterObjects { position: relative; height: 80px; }
-		#imFooPad { height: 520px; }
+		#imContent { min-height: 350px; padding: 5px 0 5px 0; }
+		#imContentGraphics { left: 0; right: 0; margin-left: auto; margin-right: auto; min-height: 350px;  background-image: none; background-color: #FFFFFF; }
+		#imFooterBg { height: 50px; background-image: none; background-color: #4FD2C2; }
+		#imFooter { margin-left: auto; margin-right: auto; height: 50px; background-image: none; background-color: transparent; }
+		#imFooterObjects { position: relative; height: 50px; }
+		#imFooPad { height: 350px; }
 		#imHeader, #imMnMnContainer, #imFooter { width: 960px; }
-		#imMnMn { width: 920px; }
+		#imMnMn { width: 590px; }
 		#imContentGraphics { width: 960px; }
 	
 }
 @media (max-width: 959px) and (min-width: 720px) {
-		html { background-image: url('computer-2982270_1920-1--1-.jpg'); background-position: center top; background-repeat: no-repeat; background-size: cover; background-attachment: fixed; background-color: #FFFFFF; }
+		html { background-image: none; background-color: #FFFFFF; }
 		#imPage { padding-top: 0; margin-top: 0px; margin-bottom: 0px; min-width: 720px; }
-		#imHeaderBg { height: 100px; background-image: none; background-color: transparent; }
-		#imHeader { position: relative; margin-bottom: 0; margin-left: auto; margin-right: auto; height: 100px; background-image: url('Transparent190-5--1-.png'); background-position: left top; background-repeat: repeat; background-attachment: scroll; background-color: transparent; }
+		#imHeaderBg { height: 100px; background-image: none; background-color: #4FD2C2; }
+		#imHeader { position: relative; margin-bottom: 0; margin-left: auto; margin-right: auto; height: 100px; background-image: none; background-color: transparent; }
 		#imHeaderObjects { position: relative; height: 100px; }
-		#imMnMnContainer { position: absolute; top: 50px; left: 0; right: 0; margin-left: auto; margin-right: auto; }
-		#imMnMn { position: relative; margin-left: 15px; margin-right: auto; height: 30px; padding: 5px 5px 5px 5px; background-image: none; background-color: transparent; }
+		#imMnMnContainer { position: absolute; top: 15px; left: 0; right: 0; margin-left: auto; margin-right: auto; }
+		#imMnMn { position: relative; margin-left: 300px; margin-right: auto; height: 30px; padding: 5px 5px 5px 5px; background-image: none; background-color: transparent; }
 		#imMnMn > ul { text-align: left; }
 		#imMnMn li { display: inline; }
 		#imMnMnGraphics { display: none; }
-		#imContent { min-height: 520px; padding: 5px 0 5px 0; }
-		#imContentGraphics { left: 0; right: 0; margin-left: auto; margin-right: auto; min-height: 520px;  background-image: url('Transparent190-3--1-.png'); background-position: left top; background-repeat: repeat; background-attachment: scroll; background-color: transparent; }
-		#imFooterBg { height: 35px; background-image: none; background-color: transparent; }
-		#imFooter { margin-left: auto; margin-right: auto; height: 35px; background-image: url('Transparent190-4--1-.png'); background-position: left top; background-repeat: repeat; background-attachment: scroll; background-color: transparent; }
-		#imFooterObjects { position: relative; height: 35px; }
-		#imFooPad { height: 520px; }
+		#imContent { min-height: 350px; padding: 5px 0 5px 0; }
+		#imContentGraphics { left: 0; right: 0; margin-left: auto; margin-right: auto; min-height: 350px;  background-image: none; background-color: #FFFFFF; }
+		#imFooterBg { height: 50px; background-image: none; background-color: #4FD2C2; }
+		#imFooter { margin-left: auto; margin-right: auto; height: 50px; background-image: none; background-color: transparent; }
+		#imFooterObjects { position: relative; height: 50px; }
+		#imFooPad { height: 350px; }
 		#imHeader, #imMnMnContainer, #imFooter { width: 720px; }
-		#imMnMn { width: 680px; }
+		#imMnMn { width: 390px; }
 		#imContentGraphics { width: 720px; }
 	
 }
 @media (max-width: 719px) and (min-width: 480px) {
-		html { background-image: url('computer-2982270_1920-2--1-.jpg'); background-position: center top; background-repeat: no-repeat; background-size: cover; background-attachment: fixed; background-color: #FFFFFF; }
+		html { background-image: none; background-color: transparent; }
 		#imPage { padding-top: 0; margin-top: 0px; margin-bottom: 0px; min-width: 480px; }
-		#imHeaderBg { height: 100px; background-image: none; background-color: transparent; }
-		#imHeader { position: relative; margin-bottom: 0; margin-left: auto; margin-right: auto; height: 100px; background-image: url('Transparent190-8--1-.png'); background-position: left top; background-repeat: repeat; background-attachment: scroll; background-color: transparent; }
+		#imHeaderBg { height: 100px; background-image: none; background-color: #4FD2C2; }
+		#imHeader { position: relative; margin-bottom: 0; margin-left: auto; margin-right: auto; height: 100px; background-image: none; background-color: transparent; }
 		#imHeaderObjects { position: relative; height: 100px; }
-		#imMnMnContainer { position: absolute; top: 50px; left: 0; right: 0; margin-left: auto; margin-right: auto; }
-		#imMnMn { position: relative; margin-left: 15px; margin-right: auto; height: 40px; padding: 5px 5px 5px 5px; background-image: none; background-color: transparent; }
+		#imMnMnContainer { position: absolute; top: 15px; left: 0; right: 0; margin-left: auto; margin-right: auto; }
+		#imMnMn { position: relative; margin-left: 420px; margin-right: auto; height: 40px; padding: 5px 5px 5px 5px; background-image: none; background-color: transparent; }
 		#imMnMn > ul { text-align: left; }
 		#imMnMn li { display: inline; }
 		#imMnMnGraphics { display: none; }
-		#imContent { min-height: 520px; padding: 5px 0 5px 0; }
-		#imContentGraphics { left: 0; right: 0; margin-left: auto; margin-right: auto; min-height: 520px;  background-image: url('Transparent190-6--1-.png'); background-position: left top; background-repeat: repeat; background-attachment: scroll; background-color: transparent; }
-		#imFooterBg { height: 35px; background-image: none; background-color: transparent; }
-		#imFooter { margin-left: auto; margin-right: auto; height: 35px; background-image: url('Transparent190-7--1-.png'); background-position: left top; background-repeat: repeat; background-attachment: scroll; background-color: transparent; }
-		#imFooterObjects { position: relative; height: 35px; }
-		#imFooPad { height: 520px; }
+		#imContent { min-height: 400px; padding: 5px 0 5px 0; }
+		#imContentGraphics { left: 0; right: 0; margin-left: auto; margin-right: auto; min-height: 400px;  background-image: none; background-color: #FFFFFF; }
+		#imFooterBg { height: 50px; background-image: none; background-color: #4FD2C2; }
+		#imFooter { margin-left: auto; margin-right: auto; height: 50px; background-image: none; background-color: transparent; }
+		#imFooterObjects { position: relative; height: 50px; }
+		#imFooPad { height: 400px; }
 		#imHeader, #imMnMnContainer, #imFooter { width: 480px; }
-		#imMnMn { width: 440px; }
+		#imMnMn { width: 40px; }
 		#imContentGraphics { width: 480px; }
 	
 }
 @media (max-width: 479px) {
-		html { background-image: url('computer-2982270_1920-3--1-.jpg'); background-position: center top; background-repeat: no-repeat; background-size: cover; background-attachment: fixed; background-color: #FFFFFF; }
+		html { background-image: none; background-color: #FFFFFF; }
 		#imPage { padding-top: 0; margin-top: 0px; margin-bottom: 0px; }
-		#imHeaderBg { height: 100px; background-image: none; background-color: transparent; }
-		#imHeader { position: relative; margin-bottom: 0; margin-left: auto; margin-right: auto; height: 100px; background-image: url('Transparent190-11--1-.png'); background-position: left top; background-repeat: repeat; background-attachment: scroll; background-color: transparent; }
+		#imHeaderBg { height: 100px; background-image: none; background-color: #4FD2C2; }
+		#imHeader { position: relative; margin-bottom: 0; margin-left: auto; margin-right: auto; height: 100px; background-image: none; background-color: transparent; }
 		#imHeaderObjects { position: relative; height: 100px; }
-		#imMnMnContainer { position: absolute; top: 50px; left: 0; right: 0; margin-left: auto; margin-right: auto; }
-		#imMnMn { position: relative; margin-left: 270px; margin-right: auto; height: 40px; padding: 5px 5px 5px 5px; background-image: none; background-color: transparent; }
+		#imMnMnContainer { position: absolute; top: 15px; left: 0; right: 0; margin-left: auto; margin-right: auto; }
+		#imMnMn { position: relative; margin-left: 15px; margin-right: auto; height: 30px; padding: 5px 5px 5px 5px; background-image: none; background-color: transparent; }
 		#imMnMn > ul { text-align: left; }
 		#imMnMn li { display: inline; }
 		#imMnMnGraphics { display: none; }
-		#imContent { min-height: 520px; padding: 5px 0 5px 0; }
-		#imContentGraphics { left: 0; right: 0; margin-left: auto; margin-right: auto; min-height: 520px;  background-image: url('Transparent190-9--1-.png'); background-position: left top; background-repeat: repeat; background-attachment: scroll; background-color: transparent; }
-		#imFooterBg { height: 35px; background-image: none; background-color: transparent; }
-		#imFooter { margin-left: auto; margin-right: auto; height: 35px; background-image: url('Transparent190-10--1-.png'); background-position: left top; background-repeat: repeat; background-attachment: scroll; background-color: transparent; }
-		#imFooterObjects { position: relative; height: 35px; }
+		#imContent { min-height: 400px; padding: 5px 0 5px 0; }
+		#imContentGraphics { left: 0; right: 0; margin-left: auto; margin-right: auto; min-height: 400px;  background-image: none; background-color: #FFFFFF; }
+		#imFooterBg { height: 50px; background-image: none; background-color: #4FD2C2; }
+		#imFooter { margin-left: auto; margin-right: auto; height: 50px; background-image: none; background-color: transparent; }
+		#imFooterObjects { position: relative; height: 50px; }
 		#imFooPad, #imBtMnContainer, #imBtMn, #imPgMnContainer { display: none; }
-		#imMnMn { width: 40px; }
+		#imMnMn { width: 280px; }
 		#imPage, #imContent, #imContentGraphics, #imFooter { box-sizing: border-box; width: 100%; }
 	
 }
