--- a/pcss/imsearch.css
+++ b/pcss/imsearch.css
@@ -1,11 +1,14 @@
 #imHeader_imCell_1 { display: block; position: relative; overflow: visible; }
 #imHeader_imCellStyle_1 { position: relative; box-sizing: border-box; text-align: center; z-index: 2;}
 #imHeader_imCellStyleGraphics_1 { position: absolute; top: 0px; bottom: 0px; background-color: transparent; }
-#imHeader_imObjectTitle_01 {overflow: hidden; text-align: left; }
-#imHeader_imObjectTitle_01_text {font: normal normal normal 20pt 'Tahoma';  padding: 0px 0px 0px 0px;background-color: transparent; position: relative; display: inline-block; }
+#imHeader_imObjectTitle_01 {overflow: hidden; text-align: center; }
+#imHeader_imObjectTitle_01_text {font: normal normal bold 26pt 'Verdana';  padding: 0px 0px 0px 0px;background-color: transparent; position: relative; display: inline-block; }
 #imHeader_imObjectTitle_01_text,
-#imHeader_imObjectTitle_01_text a { color: #FFFFFF; white-space: pre; }
+#imHeader_imObjectTitle_01_text a { color: #000000; white-space: pre; }
 #imHeader_imObjectTitle_01_text a{ text-decoration: none; }
+#imFooter_imCell_1 { display: block; position: relative; overflow: hidden; }
+#imFooter_imCellStyle_1 { position: relative; box-sizing: border-box; text-align: center; z-index: 2;}
+#imFooter_imCellStyleGraphics_1 { position: absolute; top: 0px; bottom: 0px; background-color: transparent; }
 
 /* CONTAINER AND TITLE */
 #imSearchPage { overflow: auto; }
@@ -14,8 +17,8 @@
 /* SIDE MENU  */
 
 @media (min-width: 960px) {
-	#imSearchContent { width: 798px; padding: 20px 0; float: right; }
-	#imSearchSideBar { width: 133px; padding: 20px 0; float: left; }
+	#imSearchContent { width: 806px; padding: 20px 0; float: right; }
+	#imSearchSideBar { width: 134px; padding: 20px 0; float: left; }
 	#imSearchSideBar li { display: block; width: 100%; }
 	
 }
@@ -80,7 +83,7 @@
 .imSearchVideoResult img { border-width: 0; width: 94%; padding-left: 3%; padding-right: 3%; float: left; }
 .imSearchVideoDuration { margin-top: 5px; clear: both; display: block; text-decoration: none; color: gray; font-weight: normal; }
 @media (min-width: 960px) {
-	#imSearchPage { box-sizing: border-box; width: 960px; margin-left: auto; margin-right: auto; padding: 0 5px 0 5px; }
+	#imSearchPage { box-sizing: border-box; width: 960px; margin-left: auto; margin-right: auto; padding: 0 0px 0 0px; }
 	
 }
 
@@ -100,42 +103,74 @@
 }
 
 @media (min-width: 960px) {
-	#imHeader_imObjectTitle_01_wrapper { position: absolute; top: 5px; left: 1px; width: 331px; height: 42px; z-index: 1; overflow-y: hidden; }
-	#imHeader_imCell_1 { width: 331px; min-height: 33px;  padding-top: 0px; padding-bottom: 0px; padding-left: 0px; padding-right: 0px; }
-	#imHeader_imCellStyle_1 { width: 331px; min-height: 33px; padding: 0px 0px 0px 0px; border-top: 0; border-bottom: 0; border-left: 0; border-right: 0; }
+	#imHeader_imObjectTitle_01_wrapper { position: absolute; top: 5px; left: 5px; width: 230px; height: 42px; z-index: 1; overflow-y: hidden; }
+	#imHeader_imCell_1 { width: 230px; min-height: 42px;  padding-top: 0px; padding-bottom: 0px; padding-left: 0px; padding-right: 0px; }
+	#imHeader_imCellStyle_1 { width: 230px; min-height: 42px; padding: 0px 0px 0px 0px; border-top: 0; border-bottom: 0; border-left: 0; border-right: 0; }
 	#imHeader_imCellStyleGraphics_1 { left: 0px; right: 0px; }
-	#imHeader_imObjectTitle_01_text { top: 0px; left: 0px; }
-	#imHeader_imObjectTitle_01 {min-height: 33px; }
+	#imHeader_imObjectTitle_01_text { top: 0px;  }
+	#imHeader_imObjectTitle_01 {min-height: 42px; }
 	
 }
 
 @media (max-width: 959px) and (min-width: 720px) {
-	#imHeader_imObjectTitle_01_wrapper { position: absolute; top: 10px; left: 1px; width: 331px; height: 42px; z-index: 1; overflow-y: hidden; }
-	#imHeader_imCell_1 { width: 331px; min-height: 33px;  padding-top: 0px; padding-bottom: 0px; padding-left: 0px; padding-right: 0px; }
-	#imHeader_imCellStyle_1 { width: 331px; min-height: 33px; padding: 0px 0px 0px 0px; border-top: 0; border-bottom: 0; border-left: 0; border-right: 0; }
+	#imHeader_imObjectTitle_01_wrapper { position: absolute; top: 5px; left: 5px; width: 230px; height: 42px; z-index: 1; overflow-y: hidden; }
+	#imHeader_imCell_1 { width: 230px; min-height: 42px;  padding-top: 0px; padding-bottom: 0px; padding-left: 0px; padding-right: 0px; }
+	#imHeader_imCellStyle_1 { width: 230px; min-height: 42px; padding: 0px 0px 0px 0px; border-top: 0; border-bottom: 0; border-left: 0; border-right: 0; }
 	#imHeader_imCellStyleGraphics_1 { left: 0px; right: 0px; }
-	#imHeader_imObjectTitle_01_text { top: 0px; left: 0px; }
-	#imHeader_imObjectTitle_01 {min-height: 33px; }
+	#imHeader_imObjectTitle_01_text { top: 0px;  }
+	#imHeader_imObjectTitle_01 {min-height: 42px; }
 	
 }
 
 @media (max-width: 719px) and (min-width: 480px) {
-	#imHeader_imObjectTitle_01_wrapper { position: absolute; top: 10px; left: 1px; width: 331px; height: 42px; z-index: 1; overflow-y: hidden; }
-	#imHeader_imCell_1 { width: 331px; min-height: 33px;  padding-top: 0px; padding-bottom: 0px; padding-left: 0px; padding-right: 0px; }
-	#imHeader_imCellStyle_1 { width: 331px; min-height: 33px; padding: 0px 0px 0px 0px; border-top: 0; border-bottom: 0; border-left: 0; border-right: 0; }
+	#imHeader_imObjectTitle_01_wrapper { position: absolute; top: 5px; left: 5px; width: 230px; height: 42px; z-index: 1; overflow-y: hidden; }
+	#imHeader_imCell_1 { width: 230px; min-height: 42px;  padding-top: 0px; padding-bottom: 0px; padding-left: 0px; padding-right: 0px; }
+	#imHeader_imCellStyle_1 { width: 230px; min-height: 42px; padding: 0px 0px 0px 0px; border-top: 0; border-bottom: 0; border-left: 0; border-right: 0; }
 	#imHeader_imCellStyleGraphics_1 { left: 0px; right: 0px; }
-	#imHeader_imObjectTitle_01_text { top: 0px; left: 0px; }
-	#imHeader_imObjectTitle_01 {min-height: 33px; }
+	#imHeader_imObjectTitle_01_text { top: 0px;  }
+	#imHeader_imObjectTitle_01 {min-height: 42px; }
 	
 }
 
 @media (max-width: 479px) {
-	#imHeader_imObjectTitle_01_wrapper { position: absolute; top: 10px; left: 0px; width: 331px; height: 42px; z-index: 1; overflow-y: hidden; }
-	#imHeader_imCell_1 { width: 100%; min-height: 33px;  padding-top: 0px; padding-bottom: 0px; padding-left: 0px; padding-right: 0px; box-sizing: border-box; }
+	#imHeader_imObjectTitle_01_wrapper { position: absolute; top: 5px; left: 5px; width: 230px; height: 42px; z-index: 1; overflow-y: hidden; }
+	#imHeader_imCell_1 { width: 100%; min-height: 42px;  padding-top: 0px; padding-bottom: 0px; padding-left: 0px; padding-right: 0px; box-sizing: border-box; }
 	#imHeader_imCellStyle_1 { width: 100%; min-height: 0px; padding: 0px 0px 0px 0px; }
 	#imHeader_imCellStyleGraphics_1 { top: 0px; bottom: 0px; left: 0px; right: 0px; }
-	#imHeader_imObjectTitle_01_text { top: 0px; left: 0px; }
-	#imHeader_imObjectTitle_01 {min-height: 33px; }
+	#imHeader_imObjectTitle_01_text { top: 0px;  }
+	#imHeader_imObjectTitle_01 {min-height: 42px; }
+	
+}
+
+@media (min-width: 960px) {
+	#imFooter_imHTMLObject_01_wrapper { position: absolute; top: 40px; left: 861px; width: 88px; height: 34px; z-index: 1; overflow-y: hidden; }
+	#imFooter_imCell_1 { width: 88px; min-height: 0px;  padding-top: 0px; padding-bottom: 0px; padding-left: 0px; padding-right: 0px; }
+	#imFooter_imCellStyle_1 { width: 88px; min-height: 0px; padding: 0px 0px 0px 0px; border-top: 0; border-bottom: 0; border-left: 0; border-right: 0; }
+	#imFooter_imCellStyleGraphics_1 { left: 0px; right: 0px; }
+	
+}
+
+@media (max-width: 959px) and (min-width: 720px) {
+	#imFooter_imHTMLObject_01_wrapper { position: absolute; top: 1px; left: 628px; width: 88px; height: 34px; z-index: 1; overflow-y: hidden; }
+	#imFooter_imCell_1 { width: 88px; min-height: 0px;  padding-top: 0px; padding-bottom: 0px; padding-left: 0px; padding-right: 0px; }
+	#imFooter_imCellStyle_1 { width: 88px; min-height: 0px; padding: 0px 0px 0px 0px; border-top: 0; border-bottom: 0; border-left: 0; border-right: 0; }
+	#imFooter_imCellStyleGraphics_1 { left: 0px; right: 0px; }
+	
+}
+
+@media (max-width: 719px) and (min-width: 480px) {
+	#imFooter_imHTMLObject_01_wrapper { position: absolute; top: 0px; left: 391px; width: 88px; height: 34px; z-index: 1; overflow-y: hidden; }
+	#imFooter_imCell_1 { width: 88px; min-height: 0px;  padding-top: 0px; padding-bottom: 0px; padding-left: 0px; padding-right: 0px; }
+	#imFooter_imCellStyle_1 { width: 88px; min-height: 0px; padding: 0px 0px 0px 0px; border-top: 0; border-bottom: 0; border-left: 0; border-right: 0; }
+	#imFooter_imCellStyleGraphics_1 { left: 0px; right: 0px; }
+	
+}
+
+@media (max-width: 479px) {
+	#imFooter_imHTMLObject_01_wrapper { position: absolute; top: 1px; left: 230px; width: 88px; height: 34px; z-index: 1; overflow-y: hidden; }
+	#imFooter_imCell_1 { width: 100%; min-height: 0px;  padding-top: 0px; padding-bottom: 0px; padding-left: 0px; padding-right: 0px; box-sizing: border-box; }
+	#imFooter_imCellStyle_1 { width: 100%; min-height: 0px; padding: 0px 0px 0px 0px; }
+	#imFooter_imCellStyleGraphics_1 { top: 0px; bottom: 0px; left: 0px; right: 0px; }
 	
 }
 
